src/app/donation-start/donation-start-form/donation-start-form.component.scss
@use "@angular/material" as mat;
@use "../../../abstract";
@use "../../../assets/scss/donation-common";

@include abstract.binary-options();

// Keep slider thumb label visible regardless of focus. https://stackoverflow.com/a/75678906/2803757
// See also _overwrite-mat.scss for standard slider style overrides.
::ng-deep .mdc-slider .mdc-slider__value-indicator {
  transform: none !important;
}

// Use coral (same as focus) to show we're currently dragging, including on mobile where there's
// typically no focus state.
::ng-deep .tip-slider.slider-being-dragged .mdc-slider__thumb-knob {
  background-color: abstract.$colour-highlight !important;
  border-color: abstract.$colour-highlight !important;
}

.tip-slider {
  margin-top: 2rem; // Just enough space to fit the 'thumb' label without looking cramped.
  width: 100%;
}

.donation-input.donation-input-main.tipSliderWrapper {
  margin-bottom: 0;
}

.stepOneAmountSummary {
  margin-top: 1em;
  margin-bottom: -1em;
  text-align: center;
  .total {
    font-size: 20px;
    font-weight: bold;
    color: abstract.$colour-primary;
  }
}

.mat-stepper-horizontal,
.mat-stepper-vertical {
  background: none;
  box-shadow: abstract.$box-shadow-soft;
  @include abstract.b-rt-0;
}

:host ::ng-deep div.mdc-form-field {
  font-size: inherit;
}

:host ::ng-deep .mdc-button__label {
  font-size: inherit;
}

:host ::ng-deep div.mat-step-label,
div.mat-step-label-selected,
div.mat-step-label.mat-step-label-selected {
  // important is a bit of a hack to make sure we override the font size set by material design,
  // which is different for the selected and non-selected step. Also overriding that by being more specific
  // in the selector above, including 'div', but don't want to rely just on that.

  font-size: 17px !important;
  line-height: 20px;
  @media #{abstract.$breakpoint-lg} {
    line-height: 27px;
  }
}

input {
  @include abstract.b-rt-0;
}

.label-with-limited-space {
  display: inline-block;
  max-width: 150px;
  @media #{abstract.$breakpoint-smallish} {
    max-width: 100%;
  }
}

@supports (-webkit-overflow-scrolling: touch) {
  // see https://stackoverflow.com/a/65043782
  input {
    font-size: 16px;
  }
}

:host ::ng-deep .mat-step-header {
  // ng-deep is deprecated, but I'm not sure how else to apply our style choices inside the stepper.
  background-color: white;
  font-weight: bold;
  margin-top: 15px;
  padding: 16px 24px;

  .mat-step-text-label {
    font-weight: bold;
  }

  .mat-step-icon {
    color: abstract.$colour-black;
    background-color: transparent !important;
    border-radius: 0;

    // Borders on three sides like this with the right and
    // left transparent creates an equilateral triangle.
    // (left + right) * 86% = bottom
    // from https://css-tricks.com/snippets/css/css-triangle/
    width: 0;
    height: 0;
    border-left: 17px solid transparent;
    border-right: 17px solid transparent;
    border-bottom: 29.2px solid abstract.$colour-highlight;

    .mat-step-icon-content {
      margin-top: 17px;
    }
  }
}

:host ::ng-deep .mat-stepper-vertical-line::before {
  display: none;
}

:host ::ng-deep .mat-vertical-content-container {
  // no need for the margin since we don't have the vertical line.
  margin-left: 0;
}

div .c-banner {
  background-color: white;
}

h1.donationInfoWrapper {
  display: flex;
  justify-content: space-between;
  margin-top: 10px;
  margin-bottom: 40px;
  flex-direction: column;
  gap: 40px;

  span {
    display: block;
  }

  span.side {
    font-weight: normal;
    flex-basis: 40%;
  }

  @media #{abstract.$breakpoint-md} {
    flex-direction: row;
  }
}

input:disabled {
  cursor: not-allowed; // Visual help on desktop when e.g. address lookup has frozen postcode field.
}

.b-center {
  text-align: center;
}

.b-hidden {
  display: none;
}

.b-mr-2 {
  margin-right: 2rem;
}

.b-rt-sm {
  .material-icons {
    font-size: 1rem;
    width: 1rem;
    height: 1rem;
    vertical-align: middle;
  }
}

.b-rt-1 {
  @include abstract.b-rt-1;
}

.mat-mdc-form-field {
  width: 70%;
  margin: 0 auto;
}

.mat-primary {
  margin-top: 1rem;
}

#payment-request-button {
  margin-top: 2rem;
}

.StripeElement {
  width: 100%;
}

.c-donate-form {
  margin: 2rem auto;
  h2 {
    margin-top: 1rem;
    margin-bottom: 1rem;
  }
}

input {
  font-family: inherit;
}

.c-your-donation {
  p {
    margin: 0;
    &:last-of-type {
      margin-bottom: 0.5rem;
    }
  }
}

.no-margin-top {
  margin-top: 0;
}

.donation-input {
  .form-field {
    margin: 0 auto;
    display: block;
    font-weight: 700;
  }

  // Larger breakpoints only
  .floating-label {
    white-space: initial; // make text run onto next line instead of overflowing parent div.
    font-size: 16px; // Even larger input fields need small placeholders to fit long charity names.

    @media only screen and (max-width: 650px) {
      display: none;
    }

    @media only screen and (max-width: 1200px) {
      font-size: 12px;
    }

    @media only screen and (max-width: 800px) {
      font-size: 10px;
    }
  }

  // Small breakpoints only
  .fixed-label {
    display: none;

    @media only screen and (max-width: 650px) {
      display: block;
      color: mat.m2-get-color-from-palette(abstract.$donate-primary);
      font-size: 10px;
      text-align: center;
      margin-top: 0;
      margin-bottom: 0;
      padding-left: 1.5rem;
    }
  }
}

.donation-input.donation-input-main {
  margin-top: 2.5rem;
  margin-bottom: 2.5rem;
  margin-left: auto;
  margin-right: auto;
  max-width: 400px;
  clear: both;

  input {
    text-align: right;
    font-size: 24px;
    line-height: 30px;
    font-weight: bolder;

    @media (max-width: 370px) {
      // on very narrow screens we need to give space for the prompt text above the input.
      margin-top: 30px;
    }
  }
}

input {
  outline: none;
  border: none;
  background-color: abstract.$colour-background;
  width: 100%;
  padding: 0; // We rely on containing element margin, and don't want vendor-dependent extra padding.
}

// I we would like to apply the :focus-visible-within pseduo-class but that doesn't exist. See
// https://larsmagnus.co/blog/focus-visible-within-the-missing-pseudo-class
mat-expansion-panel:has(:focus-visible) {
  box-shadow: 0 8px 8px -7px abstract.$colour-highlight !important;
}

button:focus-visible {
  outline: 1px solid abstract.$colour-highlight;
}

#giftAidAddressContainer {
  margin-top: 60px;
}

div#giftAidAddressContainer > div {
  margin-top: 20px;
}

.donation-input-tip__status-help {
  margin-bottom: 1.5rem;
}

.c-breakdown {
  margin-bottom: 1rem;

  .mat-icon {
    height: 14px;
  }
}

.c-donate-button-amount {
  vertical-align: baseline;
}

.c-donation-receipt {
  list-style-type: none;
  padding: 1rem 0;

  li {
    @include abstract.b-rt-sm;

    .mat-icon {
      vertical-align: middle;
    }
  }
}

.mat-mdc-form-field-hint {
  display: block;
  width: 100%;

  .address-loading-spinner {
    float: right;
    margin: 0;
  }
}

.c-donation-summary {
  margin: 1rem auto;
  text-align: center;
}

.error,
.stripeError {
  color: mat.m2-get-color-from-palette(abstract.$donate-warn);
  margin: 1rem 0;
}

.prefix {
  font-size: 2rem;
}

.prefix-tbg {
  font-weight: 700; // Match the bigger donate field's input style weight, which the infix matches.
}

.homeOutsideUK-wrapper {
  text-align: right;
  margin-top: 3rem;

  @media #{abstract.$breakpoint-md} {
    margin-top: inherit;
  }
}

div.match-funded-badge {
  width: 15em;
  height: 2em;
  text-align: center;
  background-color: abstract.$colour-highlight;
  font-weight: bold;
  position: absolute;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  top: -1em;
}

div.match-funded-badge-wrapper {
  position: relative;
}

mat-expansion-panel ul li {
  list-style: none disc outside;
  padding-left: 1em;
}

mat-expansion-panel {
  margin-top: 30px;
}

.mat-expansion-panel-header {
  padding-right: 5px;
  padding-left: 0;
}

.button {
  text-decoration: underline;
  display: inline-block;
  width: 100%;
  text-align: center;
  cursor: pointer;
}

.colour-primary {
  color: abstract.$colour-primary;
}

div.payment-details {
  margin-bottom: 2.5rem;
}

div.payment-details > * {
  width: 100%;
  margin-bottom: 36px;
}

div.sr-card-element {
  min-height: 22px;
  padding-top: 3px;
}

h3 {
  display: inline-block;
}

.mat-expansion-panel {
  box-shadow: none !important;
}

mat-expansion-panel-header h3 {
  min-height: 34px; // must be at least this high or so to make the .span-hr visible
}

.span-hr {
  display: inline-block;
  width: 100%;
  border-top: 1px solid #888888;
  margin-top: 30px;
  position: absolute;
}

@include abstract.friendly-captcha();

